group workouts by date rather than workout id

--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -37,3 +37,10 @@
   color: yellowgreen;
 }
 
+.inputs {
+  border-style: solid;
+  border-width: 1px;
+  border-color: greenyellow;
+  background-color: #1a1a1a;
+}
+
