--- a/src/pages/Prs/Prs.css
+++ b/src/pages/Prs/Prs.css
@@ -10,3 +10,10 @@
   flex: 1;
   min-width: 300px;
 }
+
+.box {
+  border-style: solid;
+  border-width: 1px;
+  border-color: greenyellow;
+  margin-top: 1rem;
+}
