--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -4,33 +4,53 @@
   border-style: solid;
   border-width: 1px;
   border-color: greenyellow;
-  box-shadow: greenyellow;
+  box-shadow: 0 0 5px greenyellow;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   padding: 1rem;
 }
 
+@media (max-width: 768px) {
+  .custom-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .custom-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+
 .exercises-container {
   list-style-type: none;
+  padding-left: 0;
 }
+
 
 .exercise-name {
   color: yellowgreen;
   font-size:x-large;
+  margin-bottom: 0.3rem;
 }
+
 
 .list-of-sets {
   border-style: solid;
   border-width: 1px;
   border-color: greenyellow;
   margin-bottom: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
 }
 
 .list-of-sets > li {
   list-style-type: none;
   font-weight: bold;
-  margin: 5px;
+  margin: 5px 0;
+  cursor: default;
 }
 
 .list-of-sets > li:hover {
@@ -42,5 +62,21 @@
   border-width: 1px;
   border-color: greenyellow;
   background-color: #1a1a1a;
+  color: white;
+  margin: 0.5rem 0;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.3rem;
+  width: 150px;
+}
+
+@media (max-width: 480px) {
+  .inputs {
+    width: 100%;
+  }
+}
+
+ul, li {
+  padding: 0;
+  margin: 0;
 }
 
