--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -9,6 +9,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   padding: 1rem;
+  border-radius: 0.3rem;
 }
 
 @media (max-width: 768px) {
@@ -97,6 +98,8 @@
   border-radius: 0.3rem;
   width: 150px;
 }
+
+
 
 @media (max-width: 480px) {
   .inputs {
