--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -47,7 +47,7 @@
 
 
 .list-of-sets-strength {
-  background-color: rgba(153, 205, 50, 0.6);
+  background-color: #1a1a1a;
   border-style: solid;
   border-width: 1px;
   border-color: yellowgreen;
@@ -69,7 +69,7 @@
 
 
 .list-of-sets-cardio {
-  background-color: rgba(153, 205, 50, 0.6);
+  background-color: #1a1a1a;
   border-style: solid;
   border-width: 1px;
   border-color: yellowgreen;
