--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -47,14 +47,57 @@
   }
 }
 
-.home-container > .search-container:not(.expanded) .searchbar {
-  display: none;
-}
 
-.home-container > .search-container{
+.search-container {
   position: fixed;
-  top: 40px;
-  right: 1200px;
+  top: 35px;
+  left: 20px;
   z-index: 1000;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  height: 32px;
 }
 
+.searchbar {
+  border: 1px solid yellowgreen;
+  border-radius: 0.3rem;
+  padding: 0.4rem;
+  font-size: 1rem;
+  width: 160px;
+  transition: all 0.3s ease;
+}
+
+
+.search-container:not(.expanded) .searchbar {
+  width: 0;
+  padding: 0;
+  opacity: 0;
+  border: none;
+  overflow: hidden;
+}
+
+.search-icon {
+  cursor: pointer;
+  font-size: 1.3rem;
+  color: white;
+  line-height: 1;
+  user-select: none;
+}
+
+.search-icon:hover {
+  color: yellowgreen;
+}
+
+
+@media (max-width: 600px) {
+  .searchbar {
+    width: 126px;
+    font-size: 0.9rem;
+  }
+
+  .search-container {
+    top: 38px;
+    left: 29px;
+  }
+}
