--- a/src/pages/Prs/Prs.css
+++ b/src/pages/Prs/Prs.css
@@ -4,15 +4,16 @@
   justify-content: space-between;
   gap: 2rem;
   flex-wrap: wrap;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .goals-section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 1rem;
   flex-wrap: wrap;
+  padding-top: 2rem;
 }
 
 .strength, .cardio {
@@ -44,7 +45,7 @@
   margin-bottom: 5rem;
 }
 
-/* stack workouts for smaller screens */
+
 @media (max-width: 768px) {
   .goal-container {
     grid-template-columns: repeat(2, 1fr);
