--- a/src/components/AvatarUpload/AvatarUpload.css
+++ b/src/components/AvatarUpload/AvatarUpload.css
@@ -26,7 +26,7 @@
 }
 
 .update-form button {
-  background-color: yellowgreen;
+  background-color: rgba(153, 205, 50, 0.89);
   color: white;
   font-weight: bold;
   cursor: pointer;
